--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,11 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+
+paginate: 10
+
+excerpt_separator: <!--more-->
 
 highlighter: rouge
 
