--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,9 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
 
+tag_page_layout: tag_page
+tag_page_dir: tag
+tag_permalink_style: pretty
 
 paginate: 10
 
