--- a/_config.yml
+++ b/_config.yml
@@ -53,11 +53,9 @@ kramdown:
 
 # Set the Sass partials directory, as we're using @imports
 sass:
-  style: :expanded # You might prefer to minify using :compressed
+  style: :compressed
 
 # Exclude these files from your production _site
 exclude:
   - Gemfile
   - Gemfile.lock
-
-future: true
