Add graphviz plugin to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-graphviz
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
 
 paginate: 10
